--- a/index.html
+++ b/index.html
@@ -55,8 +55,36 @@
             </div>
         
         <div class="chat-input-area">
+            <button class="api-call-button">API</button>
             <input type="text" class="chat-input" placeholder="输入消息...">
             <button class="send-button">发送</button>
+        </div>
+
+        <!-- AI 人设编辑模态框 -->
+        <div id="persona-modal" class="modal-overlay hidden">
+            <div class="modal-content">
+                <h2>编辑 AI 人设</h2>
+                <div class="form-group">
+                    <label for="persona-name">AI 名称</label>
+                    <input type="text" id="persona-name" placeholder="例如：知识渊博的教授">
+                </div>
+                <div class="form-group">
+                    <label for="persona-prompt">核心人设 (System Prompt)</label>
+                    <textarea id="persona-prompt" rows="6" placeholder="描述 AI 的角色、性格、背景、说话风格..."></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="user-name">用户姓名</label>
+                    <input type="text" id="user-name" placeholder="你的名字">
+                </div>
+                <div class="form-group">
+                    <label for="user-persona">用户人设</label>
+                    <textarea id="user-persona" rows="3" placeholder="描述你自己的角色、性格..."></textarea>
+                </div>
+                <div class="modal-actions">
+                    <button id="cancel-persona-btn" class="btn-secondary">取消</button>
+                    <button id="save-persona-btn" class="btn-primary">保存</button>
+                </div>
+            </div>
         </div>
         
     </div>
@@ -84,6 +112,7 @@
                 </select>
             </div>
             <button id="fetch-models-btn" class="btn-primary">拉取模型</button>
+            <button id="save-settings-btn" class="btn-primary">保存设置</button>
             <div id="status-message" class="status-message"></div>
         </div>
     </div>
