--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/components/chat.css">
     <link rel="stylesheet" href="css/components/settings.css">
     <link rel="stylesheet" href="css/utilities.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
 
@@ -56,7 +57,7 @@
         
         <div class="chat-input-area">
             <button class="api-call-button">API</button>
-            <input type="text" class="chat-input" placeholder="输入消息...">
+            <textarea class="chat-input" placeholder="输入消息..." rows="1"></textarea>
             <button class="send-button">发送</button>
         </div>
 
@@ -123,5 +124,16 @@
     </div>
 
 <script type="module" src="js/main.js"></script>
+<script>
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+            navigator.serviceWorker.register('/service-worker.js').then(registration => {
+                console.log('ServiceWorker registration successful with scope: ', registration.scope);
+            }, err => {
+                console.log('ServiceWorker registration failed: ', err);
+            });
+        });
+    }
+</script>
 </body>
 </html>
