--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/components/settings.css">
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="assets/icon-192.png">
 </head>
 <body>
 
@@ -80,6 +81,10 @@
                 <div class="form-group">
                     <label for="user-persona">用户人设</label>
                     <textarea id="user-persona" rows="3" placeholder="描述你自己的角色、性格..."></textarea>
+                </div>
+                <div class="form-group form-group-slider">
+                    <label for="font-size-slider">聊天字体大小: <span id="font-size-value">14</span>px</label>
+                    <input type="range" id="font-size-slider" min="12" max="20" value="14" class="slider">
                 </div>
                 <div class="modal-actions">
                     <button id="cancel-persona-btn" class="btn-secondary">取消</button>
